--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <tbody>
             <tr>
                 <td>Lorem ipsum5 dolor</td>
-                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum6 dolor</td>
                 <td>Lorem ipsum dolor </td>
             </tr>
-            <tr>
+            <tr class="white">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
