modifiche titolo + scritte

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <img src="./img/logo.svg" alt="pattern" class="logo"> 
     </div>
 
-    <div class="scritte">
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <p><span class="evidenziatore2">Scritto da</span> <span class="evidenziatore"> <strong>The Booleaner</strong></span></p>
-        <span class="data"><p>il 10/10/2020</p></span>
-    </div> 
+        <h1 class="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <div class="scritte">
+            <p><span class="evidenziatore2">Scritto da</span> <span class="evidenziatore"> <strong>The Booleaner</strong></span></p>
+            <span class="data"><p>il 10/10/2020</p></span>
+        </div>
+        
+        
     <!-- /header -->
 
     <!-- main -->
@@ -72,7 +74,7 @@
     </table>
 
     <p>Lorem ipsum dolor sit amet <span class="evidenzia">consectetur adipisicing elit. Cupiditate ipsa reiciendis enim ex magni alias rerum optio quo velit</span>, qui aliquid nulla eaque. Sequi, beatae. Temporibus recusandae maxime doloremque quasi.
-    Beatae officiis illum tempora accusamus dolore dolorem aperiam blanditiis quia iure voluptas ipsum illo quasi repellendus consectetur doloremque veritatis, ullam nam voluptate dignissimos facere amet eum aliquam recusandae? Dolore, velit!</p>
+     Beatae officiis illum tempora accusamus dolore dolorem aperiam blanditiis quia iure voluptas ipsum illo quasi repellendus consectetur doloremque veritatis, ullam nam voluptate dignissimos facere amet eum aliquam recusandae? Dolore, velit!</p>
     <!-- /main -->
 
     <!-- footer -->
